--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-
+  <link href="https://fonts.googleapis.com/css?family=Teko&amp;display=swap" rel="stylesheet">
   <!-- Theme CSS -->
   <link href="css/freelancer.min.css" rel="stylesheet">
+  
+  <!-- Custom CSS -->
+  <link href="css/hasnainportfolio.css" rel="stylesheet">
+  <link href="css/balloon.min.css" rel="stylesheet">
 
+  <!-- Custom JS -->
+  <script src="/js/portfolio.js" type="text/javascript"></script>
 </head>
 
 <body id="page-top">
@@ -40,9 +46,6 @@
           </li>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -69,7 +72,11 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Web Developer</p>
+      <p class="masthead-subheading font-weight-light mb-0">
+        <a href="https://github.com/hashamim" class="masthead-link" aria-label="Github" data-balloon-pos="up"><i class="fab fa-github"></i></a>
+        <a href="https://linkedin.com/in/hasnainshamim" class="masthead-link" aria-label="Linkedin" data-balloon-pos="up"><i class="fab fa-linkedin"></i></a>
+        <a href="#" id="copy-link" class="masthead-link" onclick="copyFunc(event)" aria-label="Click to Copy Email" data-balloon-pos="up"><i class="far fa-envelope"></i></a>
+      </p>
 
     </div>
   </header>
@@ -94,42 +101,49 @@
       <div class="row">
 
         <!-- Portfolio Item 1 -->
-        <div class="col-md-6 col-lg-4">
+        <div class="col-sm-12 col-md-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+            <div class="img-container newtflix">
+              <img class="img-fluid" src="img/portfolio/Newtflix_logo.png" alt="">
+            </div>
           </div>
         </div>
 
         <!-- Portfolio Item 2 -->
-        <div class="col-md-6 col-lg-4">
+        <div class="col-sm-12 col-md-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+            <div class="img-container just-roll">
+              <!-- <h1 class="just-roll-header">Just Roll</h1> -->
+              <img class="img-fluid" src="img/portfolio/just_roll_logo.png" alt="">
+            </div>
           </div>
         </div>
 
         <!-- Portfolio Item 3 -->
-        <div class="col-md-6 col-lg-4">
+        <div class="col-sm-12 col-md-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+            <div class="img-container">
+              <img class="img-fluid" src="img/portfolio/generatedtext.png" alt="">
+            </div>
           </div>
         </div>
 
-        <!-- Portfolio Item 4 -->
+        <!-- Portfolio Item 4
         <div class="col-md-6 col-lg-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -141,7 +155,7 @@
           </div>
         </div>
 
-        <!-- Portfolio Item 5 -->
+        Portfolio Item 5
         <div class="col-md-6 col-lg-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -153,7 +167,7 @@
           </div>
         </div>
 
-        <!-- Portfolio Item 6 -->
+        Portfolio Item 6
         <div class="col-md-6 col-lg-4">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -163,7 +177,7 @@
             </div>
             <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
           </div>
-        </div>
+        </div> -->
 
       </div>
       <!-- /.row -->
@@ -176,7 +190,7 @@
     <div class="container">
 
       <!-- About Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+      <h2 class="page-section-heading text-center text-uppercase text-white">About Me</h2>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -189,21 +203,22 @@
 
       <!-- About Section Content -->
       <div class="row">
-        <div class="col-lg-4 ml-auto">
-          <p class="lead">This Site is still under construction</p>
+        <div class="lg-auto ml-auto">
+          <p class="lead">I am a Software Engineer who enjoys the iterative design process and problem solving aspects of programming. I
+          programmed in C / C++ for 4 years before deciding to try web development and learned React. I have developed websites using React, Javascript, Ruby on Rails.
+          
+          Im a garden variety nerd who is excited to meet a diverse group of people, learn new things, and have new experiences.</p>
         </div>
-        <div class="col-lg-4 mr-auto">
-          <p class="lead">check out my github <a style="color: white" href="https://github.com/hashamim">here</a></p>
+        <div class="lg-auto mr-auto">
+          <p class="lead">Check out my github <a style="color: white; text-decoration: underline" href="https://github.com/hashamim">here</a></p>
         </div>
       </div>
 
       <!-- About Section Button -->
-      <div class="text-center mt-4">
+      <!-- <div class="text-center mt-4">
         <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/themes/freelancer/">
-          <i class="fas fa-download mr-2"></i>
-          Free Download!
         </a>
-      </div>
+      </div> -->
 
     </div>
   </section>
@@ -224,66 +239,6 @@
         <div class="divider-custom-line"></div>
       </div>
 
-
-    </div>
-  </section>
-  <!-- Contact Section -->
-  <section class="page-section" id="contact">
-    <div class="container">
-
-      <!-- Contact Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
-
-      <!-- Icon Divider -->
-      <div class="divider-custom">
-        <div class="divider-custom-line"></div>
-        <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
-        </div>
-        <div class="divider-custom-line"></div>
-      </div>
-
-      <!-- Contact Section Form -->
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-          <form name="sentMessage" id="contactForm" novalidate="novalidate">
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Name</label>
-                <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Email Address</label>
-                <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Phone Number</label>
-                <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Message</label>
-                <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <br>
-            <div id="success"></div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
-            </div>
-          </form>
-        </div>
-      </div>
 
     </div>
   </section>
@@ -358,7 +313,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Log Cabin</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Newtflix</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -368,7 +323,9 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/cabin.png" alt="">
+                <video class="img-fluid rounded mb-6" src="videos/newtflix-demo2.mp4" autoplay loop muted alt="">
+                  Your Browser does not support this video
+                </video>
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -397,7 +354,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tasty Cake</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Just Roll</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -407,7 +364,9 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/cake.png" alt="">
+                <video class="img-fluid rounded mb-5" src="videos/justrolldemo.mp4" autoplay muted loop alt="">
+                  Your Browser does not support this video
+                </video>
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -436,7 +395,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Circus Tent</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Thursday the Fourteenth</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -446,7 +405,9 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/circus.png" alt="">
+                <video class="img-fluid rounded mb-6" src="videos/thursdaythefourteenth.mp4" autoplay muted loop alt="">
+                  Your Browser does not support this video
+                </video>
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -591,7 +552,7 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/freelancer.min.js"></script>
-
+  <input style="display:none" type="text"id="copy-text" value="hashamim@gmail.com" readOnly/>
 </body>
 
 </html>
