added skills to portfolio

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Teko&amp;display=swap" rel="stylesheet">
+
+  <!-- Dev Icons https://konpa.github.io/devicon/-->
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <!-- Theme CSS -->
   <link href="css/freelancer.min.css" rel="stylesheet">
   
@@ -73,8 +76,8 @@
 
       <!-- Masthead Subheading -->
       <p class="masthead-subheading font-weight-light mb-0">
-        <a href="https://github.com/hashamim" class="masthead-link" aria-label="Github" data-balloon-pos="up"><i class="fab fa-github"></i></a>
-        <a href="https://linkedin.com/in/hasnainshamim" class="masthead-link" aria-label="Linkedin" data-balloon-pos="up"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/hashamim" target="_blank" class="masthead-link" aria-label="Github" data-balloon-pos="up"><i class="fab fa-github"></i></a>
+        <a href="https://linkedin.com/in/hasnainshamim" target="_blank" class="masthead-link" aria-label="Linkedin" data-balloon-pos="up"><i class="fab fa-linkedin"></i></a>
         <a href="#" id="copy-link" class="masthead-link" onclick="copyFunc(event)" aria-label="Click to Copy Email" data-balloon-pos="up"><i class="far fa-envelope"></i></a>
       </p>
 
@@ -238,8 +241,56 @@
         </div>
         <div class="divider-custom-line"></div>
       </div>
-
-
+      <div class="row skills-icons">
+        <div class="col-lg-3 col-md-4 col-sm-6">
+          <i class="devicon-react-original-wordmark colored"></i>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+          <i class="devicon-rails-plain-wordmark colored"></i>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+          <i class="devicon-javascript-plain colored"></i>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+          <i class="devicon-html5-plain-wordmark colored"></i>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+          <i class="devicon-ruby-plain-wordmark colored"></i>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+          <i class="devicon-postgresql-plain-wordmark colored"></i>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+          <i class="devicon-amazonwebservices-original colored"></i>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+          <i class="devicon-babel-plain colored"></i>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+          <i class="devicon-visualstudio-plain colored"></i>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+          <i class="devicon-css3-plain-wordmark colored"></i>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+          <i class="devicon-linux-plain colored"></i>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+          <i class="devicon-java-plain-wordmark colored"></i>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+          <i class="devicon-cplusplus-line-wordmark"></i>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+          <i class="devicon-python-plain-wordmark colored"></i>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+          <i class="devicon-heroku-plain-wordmark colored"></i>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+          <i class="devicon-nodejs-plain colored"></i>
+        </div>
+      </div>
     </div>
   </section>
 
