added data balloons and reaarranged skills

--- a/index.html
+++ b/index.html
@@ -242,53 +242,53 @@
         <div class="divider-custom-line"></div>
       </div>
       <div class="row skills-icons">
-        <div class="col-lg-3 col-md-4 col-sm-6">
+        <div class="col-lg-3 col-md-4 col-sm-6" aria-label="React.js" data-balloon-pos="up">
           <i class="devicon-react-original-wordmark colored"></i>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6">
-          <i class="devicon-rails-plain-wordmark colored"></i>
+        <div class="col-lg-3 col-md-4 col-sm-6" aria-label="Ruby on Rails" data-balloon-pos="up">
+          <i class="devicon-rails-plain-wordmark colored" ></i>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6">
+        <div class="col-lg-3 col-md-4 col-sm-6" aria-label="JavaScript" data-balloon-pos="up">
           <i class="devicon-javascript-plain colored"></i>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6">
-          <i class="devicon-html5-plain-wordmark colored"></i>
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-6">
-          <i class="devicon-ruby-plain-wordmark colored"></i>
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-6">
+        <div class="col-lg-3 col-md-4 col-sm-6" aria-label="PostgreSQL" data-balloon-pos="up">
           <i class="devicon-postgresql-plain-wordmark colored"></i>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6">
+        <div class="col-lg-3 col-md-4 col-sm-6" aria-label="Amazon Web Services" data-balloon-pos="up">
           <i class="devicon-amazonwebservices-original colored"></i>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6">
-          <i class="devicon-babel-plain colored"></i>
+        <div class="col-lg-3 col-md-4 col-sm-6" aria-label="Ruby" data-balloon-pos="up">
+          <i class="devicon-ruby-plain-wordmark colored"></i>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6">
-          <i class="devicon-visualstudio-plain colored"></i>
+        <div class="col-lg-3 col-md-4 col-sm-6" aria-label="HTML5" data-balloon-pos="up">
+          <i class="devicon-html5-plain-wordmark colored"></i>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6">
+        <div class="col-lg-3 col-md-4 col-sm-6" aria-label="CSS3" data-balloon-pos="up">
           <i class="devicon-css3-plain-wordmark colored"></i>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6">
-          <i class="devicon-linux-plain colored"></i>
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-6">
+        <div class="col-lg-3 col-md-4 col-sm-6" aria-label="Java" data-balloon-pos="up">
           <i class="devicon-java-plain-wordmark colored"></i>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6">
+        <div class="col-lg-3 col-md-4 col-sm-6" aria-label="C++" data-balloon-pos="up">
           <i class="devicon-cplusplus-line-wordmark"></i>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6">
+        <div class="col-lg-3 col-md-4 col-sm-6" aria-label="Python" data-balloon-pos="up">
           <i class="devicon-python-plain-wordmark colored"></i>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6">
+        <div class="col-lg-3 col-md-4 col-sm-6" aria-label="Heroku" data-balloon-pos="up">
           <i class="devicon-heroku-plain-wordmark colored"></i>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6">
+        <div class="col-lg-3 col-md-4 col-sm-6" aria-label="Node.js" data-balloon-pos="up">
           <i class="devicon-nodejs-plain colored"></i>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6" aria-label="Babel" data-balloon-pos="up">
+          <i class="devicon-babel-plain colored"></i>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6" aria-label="Visual Studio" data-balloon-pos="up">
+          <i class="devicon-visualstudio-plain colored"></i>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6" aria-label="Linux" data-balloon-pos="up">
+          <i class="devicon-linux-plain colored"></i>
         </div>
       </div>
     </div>
@@ -302,17 +302,17 @@
         <!-- Footer Location -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Location</h4>
-          <p class="lead mb-0">2215 John Daniel Drive
-            <br>Clark, MO 65243</p>
+          <p class="lead mb-0">Harlem, New York
+            <br>NY, 10037</p>
         </div>
 
         <!-- Footer Social Icons -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Around the Web</h4>
-          <a class="btn btn-outline-light btn-social mx-1" href="#">
+          <a class="btn btn-outline-light btn-social mx-1" href="https:/facebook.com/hasnain.shamim.1">
             <i class="fab fa-fw fa-facebook-f"></i>
           </a>
-          <a class="btn btn-outline-light btn-social mx-1" href="#">
+          <a class="btn btn-outline-light btn-social mx-1" href="">
             <i class="fab fa-fw fa-twitter"></i>
           </a>
           <a class="btn btn-outline-light btn-social mx-1" href="#">
