filled in footer text

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       <p class="masthead-subheading font-weight-light mb-0">
         <a href="https://github.com/hashamim" target="_blank" class="masthead-link" aria-label="Github" data-balloon-pos="up"><i class="fab fa-github"></i></a>
         <a href="https://linkedin.com/in/hasnainshamim" target="_blank" class="masthead-link" aria-label="Linkedin" data-balloon-pos="up"><i class="fab fa-linkedin"></i></a>
+        <a href="https://angel.co/hasnain-shamim" target="_blank" class="masthead-link" aria-label="Angel List" data-balloon-pos="up"><i class="fab fa-angellist"></i></i></a>
         <a href="#" id="copy-link" class="masthead-link" onclick="copyFunc(event)" aria-label="Click to Copy Email" data-balloon-pos="up"><i class="far fa-envelope"></i></a>
       </p>
 
@@ -309,25 +310,27 @@
         <!-- Footer Social Icons -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Around the Web</h4>
-          <a class="btn btn-outline-light btn-social mx-1" href="https:/facebook.com/hasnain.shamim.1">
+          <a class="btn btn-outline-light btn-social mx-1" href="https://facebook.com/hasnain.shamim.1" target="_blank">
             <i class="fab fa-fw fa-facebook-f"></i>
           </a>
-          <a class="btn btn-outline-light btn-social mx-1" href="">
-            <i class="fab fa-fw fa-twitter"></i>
+          <a class="btn btn-outline-light btn-social mx-1" href="https://angel.co/hasnain-shamim" target="_blank">
+            <i class="fab fa-fw fa-angellist"></i>
           </a>
-          <a class="btn btn-outline-light btn-social mx-1" href="#">
+          <a class="btn btn-outline-light btn-social mx-1" href="https://linkedin.com/in/hasnainshamim" target="_blank">
             <i class="fab fa-fw fa-linkedin-in"></i>
           </a>
-          <a class="btn btn-outline-light btn-social mx-1" href="#">
+          <a class="btn btn-outline-light btn-social mx-1" href="" target="_blank">
             <i class="fab fa-fw fa-dribbble"></i>
           </a>
         </div>
 
         <!-- Footer About Text -->
         <div class="col-lg-4">
-          <h4 class="text-uppercase mb-4">About Freelancer</h4>
-          <p class="lead mb-0">Freelance is a free to use, MIT licensed Bootstrap theme created by
-            <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+          <h4 class="text-uppercase mb-4">Thanks For Making It This Far</h4>
+          <p class="lead mb-0">If you want to contact me be sure to connect with me via email or linkedin
+            <!-- <a href="http://startbootstrap.com">Start Bootstrap</a> -->
+            .
+          </p>
         </div>
 
       </div>
@@ -337,7 +340,7 @@
   <!-- Copyright Section -->
   <section class="copyright py-4 text-center text-white">
     <div class="container">
-      <small>Copyright &copy; Your Website 2019</small>
+      <small>Copyright &copy; Hasnain Shamim 2019</small>
     </div>
   </section>
 
@@ -603,7 +606,6 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/freelancer.min.js"></script>
-  <input style="display:none" type="text"id="copy-text" value="hashamim@gmail.com" readOnly/>
 </body>
 
 </html>
