added project descriptions and changed masthead icon spacing to be responsive

--- a/index.html
+++ b/index.html
@@ -328,7 +328,6 @@
         <div class="col-lg-4">
           <h4 class="text-uppercase mb-4">Thanks For Making It This Far</h4>
           <p class="lead mb-0">If you want to contact me be sure to connect with me via email or linkedin
-            <!-- <a href="http://startbootstrap.com">Start Bootstrap</a> -->
             .
           </p>
         </div>
@@ -381,7 +380,8 @@
                   Your Browser does not support this video
                 </video>
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-5"><a href="http://newtflix.herokuapp.com" target="_blank">Newtflix</a> is a replica of netflix built from the ground up using pure React and Ruby on Rails, with videos and images hosted on AWS. The project was built to emulate Netflix's dynamic frontend while attempting to meet the challenge of minimizing backend calls for video fetching. Check it out <a href="http://newtflix.herokuapp.com" target="_blank">here</a>. Or to see the code click <a href="https://github.com/hashamim/newtflix" target="_blank">here</a>.</p>
+                <!-- <p class="mb-5">Check it out <a href="http://newtflix.herokuapp.com" target="_blank">here</a>. Or to see the code go <a href="https://github.com/hashamim/newtflix" target="_blank">here</a>.</p> -->
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -422,7 +422,7 @@
                   Your Browser does not support this video
                 </video>
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-5"><a href="https://hashamim.github.io/justroll" target="_blank">Just Roll</a> is a 3D javascript based game played entirely in the user's browser. The player can interact with movable 3D object using simulated physics and collision detection. Try to get to the goal without falling off the level! check it out <a href="https://hashamim.github.io/justroll" target="_blank">here</a>. Or check out the repository <a href="https://hashamim.github.io/justroll" target="_blank">here</a>.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -463,7 +463,10 @@
                   Your Browser does not support this video
                 </video>
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-5">Thursday the Fourteenth is a primitive,
+                augmented reality, tag game. Players use wrist mounted sensors to tag enemies and deal damage. One set of sensors read
+                gestures using 9DOF sensors. The other uses a webcam to detect colored spheres on enemy players. Check out the ui code
+                here <a href="https://github.com/hashamim/fridaythefourteenthui" target="_blank">here</a>. Check out the server code <a href="https://github.com/hashamim/edison_gameserver" target="_blank">here</a></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -502,7 +505,7 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/game.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-5"></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
