--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link href="css/balloon.min.css" rel="stylesheet">
 
   <!-- Custom JS -->
-  <script src="/js/portfolio.js" type="text/javascript"></script>
+  <script src="js/portfolio.js" type="text/javascript"></script>
 </head>
 
 <body id="page-top">
