replaced babel with webpack

--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
         <div class="col-lg-3 col-md-4 col-sm-6" aria-label="Node.js" data-balloon-pos="up">
           <i class="devicon-nodejs-plain colored"></i>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6" aria-label="Babel" data-balloon-pos="up">
-          <i class="devicon-babel-plain colored"></i>
+        <div class="col-lg-3 col-md-4 col-sm-6" aria-label="Webpack" data-balloon-pos="up">
+          <i class="devicon-webpack-plain colored"></i>
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6" aria-label="Visual Studio" data-balloon-pos="up">
           <i class="devicon-visualstudio-plain colored"></i>
