reformatted top masthead links to work with mobile

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">
-        <a href="https://github.com/hashamim" target="_blank" class="masthead-link" aria-label="Github" data-balloon-pos="up"><i class="fab fa-github"></i></a>
-        <a href="https://linkedin.com/in/hasnainshamim" target="_blank" class="masthead-link" aria-label="Linkedin" data-balloon-pos="up"><i class="fab fa-linkedin"></i></a>
-        <a href="https://angel.co/hasnain-shamim" target="_blank" class="masthead-link" aria-label="Angel List" data-balloon-pos="up"><i class="fab fa-angellist"></i></i></a>
-        <a href="#" id="copy-link" class="masthead-link" onclick="copyFunc(event)" aria-label="Click to Copy Email" data-balloon-pos="up"><i class="far fa-envelope"></i></a>
+      <p class="font-weight-light mb-0 row">
+        <a href="https://github.com/hashamim" target="_blank" class="masthead-link col-sm-3" aria-label="Github" data-balloon-pos="up"><i class="fab fa-github"></i></a>
+        <a href="https://linkedin.com/in/hasnainshamim" target="_blank" class="masthead-link col-sm-3" aria-label="Linkedin" data-balloon-pos="up"><i class="fab fa-linkedin"></i></a>
+        <a href="https://angel.co/hasnain-shamim" target="_blank" class="masthead-link col-sm-3" aria-label="Angel List" data-balloon-pos="up"><i class="fab fa-angellist"></i></i></a>
+        <a href="#" id="copy-link" class="masthead-link col-sm-3" onclick="copyFunc(event)" aria-label="Click to Copy Email" data-balloon-pos="up"><i class="far fa-envelope"></i></a>
       </p>
 
     </div>
@@ -327,7 +327,7 @@
         <!-- Footer About Text -->
         <div class="col-lg-4">
           <h4 class="text-uppercase mb-4">Thanks For Making It This Far</h4>
-          <p class="lead mb-0">If you want to contact me be sure to connect with me via email or linkedin
+          <p class="lead mb-0">If you want to contact me be sure to connect with me via email at hashamim@gmail.com
             .
           </p>
         </div>
