--- a/index.html
+++ b/index.html
@@ -75,13 +75,20 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="font-weight-light mb-0 row">
-        <a href="https://github.com/hashamim" target="_blank" class="masthead-link col-sm-3" aria-label="Github" data-balloon-pos="up"><i class="fab fa-github"></i></a>
-        <a href="https://linkedin.com/in/hasnainshamim" target="_blank" class="masthead-link col-sm-3" aria-label="Linkedin" data-balloon-pos="up"><i class="fab fa-linkedin"></i></a>
-        <a href="https://angel.co/hasnain-shamim" target="_blank" class="masthead-link col-sm-3" aria-label="Angel List" data-balloon-pos="up"><i class="fab fa-angellist"></i></i></a>
-        <a href="#" id="copy-link" class="masthead-link col-sm-3" onclick="copyFunc(event)" aria-label="Click to Copy Email" data-balloon-pos="up"><i class="far fa-envelope"></i></a>
-      </p>
-
+      <div class="font-weight-light mb-0 row">
+        <div class="col-sm-3">
+          <a href="https://github.com/hashamim" target="_blank" class="masthead-link" aria-label="Github" data-balloon-pos="up"><i class="fab fa-github"></i></a>
+        </div>
+        <div class="col-sm-3">
+          <a href="https://linkedin.com/in/hasnainshamim" target="_blank" class="masthead-link" aria-label="Linkedin" data-balloon-pos="up"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <div class="col-sm-3">
+          <a href="https://angel.co/hasnain-shamim" target="_blank" class="masthead-link" aria-label="Angel List" data-balloon-pos="up"><i class="fab fa-angellist"></i></i></a>
+        </div>
+        <div class="col-sm-3">
+          <a href="" id="copy-link" target="_blank" class="masthead-link" onclick="copyFunc(event)" aria-label="Click to Copy Email" data-balloon-pos="up"><i class="far fa-envelope"></i></a>
+          </div>
+        </div>
     </div>
   </header>
 
