added flavicon and changed picture

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <meta name="author" content="">
 
   <title>Hasnain Shamim</title>
+  <link href="img/flaviconhasnain.png" rel="Icon">
 
   <!-- Custom fonts for this theme -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Teko&amp;display=swap" rel="stylesheet">
-
   <!-- Dev Icons https://konpa.github.io/devicon/-->
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <!-- Theme CSS -->
@@ -60,7 +60,7 @@
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-5" src="img/profimgpls.png" alt="">
+      <img class="masthead-avatar mb-5" src="img/newprofimg.jpg" alt="">
 
       <!-- Masthead Heading -->
       <h1 class="masthead-heading text-uppercase mb-0">Hasnain Shamim</h1>
