--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-5" src="img/newprofimg.jpg" alt="">
+      <img class="masthead-avatar mb-5" src="img/newprofimg.JPG" alt="">
 
       <!-- Masthead Heading -->
       <h1 class="masthead-heading text-uppercase mb-0">Hasnain Shamim</h1>
