--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" data-toggle="modal" data-target="#resumeModal">Resume</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="" data-toggle="modal" data-target="#resumeModal">Resume</a>
           </li>
         </ul>
       </div>
@@ -364,12 +364,10 @@
   <div class="portfolio-modal modal fade" id="resumeModal" tabindex="-1" role="dialog" aria-labelledby="resumeModal" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
       <div class="modal-content">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">
-            <i class="fas fa-times"></i>
-          </span>
-        </button>
-        <embed src="img/Hasnain_Shamim_Resume.pdf" width="800px" height="2100px" />
+        <div class="resume-container">
+          <embed src="img/Hasnain_Shamim_Resume.pdf" width="100%" height="100%" />
+        </div>
+      </div>
       </div>
     </div>
   </div>
