--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="" data-toggle="modal" data-target="#resumeModal">Resume</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="" data-toggle="modal" data-target="#resumeModal" onclick="resumeModal(event)">Resume</a>
           </li>
         </ul>
       </div>
@@ -363,10 +363,10 @@
   <!-- Resume Modal -->
   <div class="portfolio-modal modal fade" id="resumeModal" tabindex="-1" role="dialog" aria-labelledby="resumeModal" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
-      <div class="modal-content">
-        <div class="resume-container">
-          <embed src="img/Hasnain_Shamim_Resume.pdf" width="100%" height="100%" />
-        </div>
+      <div class="modal-content" id="resume-container">
+        <!-- <div class="resume-container"> -->
+          <embed src="img/Hasnain_Shamim_Resume.pdf" width="100%" height="100%" id="resume"/>
+        <!-- </div> -->
       </div>
       </div>
     </div>
