--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
     <div class="modal-dialog modal-xl" role="document">
       <div class="modal-content" id="resume-container">
         <!-- <div class="resume-container"> -->
-          <embed src="img/Hasnain_Shamim_Resume.pdf" width="100%" height="100%" id="resume"/>
+          <embed src="img/Hasnain_Shamim_Resume.pdf" type="application/pdf" width="100%" height="100%" id="resume"/>
         <!-- </div> -->
       </div>
       </div>
