attempting to fix bug on mobile browsers

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
   <!-- Resume Modal -->
   <div class="portfolio-modal modal fade" id="resumeModal" tabindex="-1" role="dialog" aria-labelledby="resumeModal" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
-      <div class="modal-content" id="resume-container">
+      <div class="modal-content" id="resume-container" data-ran="0">
         <!-- <div class="resume-container"> -->
           <embed src="img/Hasnain_Shamim_Resume.pdf" type="application/pdf" width="100%" height="100%" id="resume"/>
         <!-- </div> -->
